Bug 410131 - DM isn't buffering writes when saving a file.  r=biesi, sr=bz